[project]
name = "extremesealevel-pointsoverthreshold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dask>=2025.11.0",
    "h5netcdf>=1.7.3",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "scipy>=1.16.3",
    "xarray>=2025.11.0",
]

[project.scripts]
extremesealevel-pointsoverthreshold = "extremesealevel_pointsoverthreshold:cli.main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "ruff>=0.14.5",
    "scipy-stubs>=1.16.3.3",
]
[tool.ruff]
exclude = ["**/sample_from_quantiles.py"]
